corrected some styles

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -58,7 +58,7 @@ header{
   padding-bottom: 20px;
 }
 footer{
-  padding: 20px;
+  padding: 20px 10%;
   background-color: $featured-text-color;
   color: white;
   font-size: 17px;
