--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ header {
   padding-bottom: 20px; }
 
 footer {
-  padding: 20px;
+  padding: 20px 10%;
   background-color: #3B5A76;
   color: white;
   font-size: 17px;
